production/tools/tests/gaiat/arrays_test00.ruleset
////////////////////////////////////////////////////
// Copyright (c) Gaia Platform LLC
//
// Use of this source code is governed by the MIT
// license that can be found in the LICENSE.txt file
// or at https://opensource.org/licenses/MIT.
////////////////////////////////////////////////////

// RUN: not %gaiat %s -- 2>&1| FileCheck  %s

// TESTCASE: assign to scalar value not in table
ruleset test00
{
    on_insert(farmer)
    {
        farmer.previous_years[0] = 5;
    }
}

// CHECK: error: no member named 'previous_years' in 'farmer_{{([a-z, 0-9]{32})}}__type'
